trunk/Archive2/d3/f9cd494273121f/output
+ g++-4.8 -std=c++11 -O3 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:9:5: error: static assertion failed: ..
     static_assert(std::is_move_constructible<a>(), "..");
     ^
